feat: récupération des données des adresses ip pour chaque service

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -667,7 +667,10 @@
       "tabServices": {
         "optionalServices": "Services optionnels",
         "services": "Services",
-        "ipAdress": "Adresse IP Fixe"
+        "ipAdressFix": "Adresse IP Fixe",
+        "apn": "APN",
+        "ipAdress": "Adresse IP",
+        "version": "Version"
       }
     },
     "actCreation": {
