--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -289,7 +289,8 @@
       "RECOVERY_SUSPEND": "Suspension pour impayé",
       "RECOVERY_RELEASED": "Résiliation du compte",
       "GEO_LOCATION": "Localisation M2M",
-      "UPDATE_COMMITMENT": "Durée engagement"
+      "UPDATE_COMMITMENT": "Durée engagement",
+      "SUSPENDION": "Suspension"
     },
     "actStatuses": {
       "WAITING": "En attente",
