fix: correction et amélioration de l'ouverture du panel de détail de la commande

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -331,6 +331,7 @@
       },
       "details": {
         "title": "Acte de gestion {id}",
+        "noResult": "L'acte de gestion n'a pas été trouvé",
         "manageActTitle": "{type} - {date}",
         "detailTitle": "Détail de l'acte de gestion",
         "massActionDetail": "Détail de l'action de masse",
