--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -271,6 +271,11 @@
       }
     }
   },
+  "getreport": {
+    "pageTitle": "Modèles de rapports",
+    "reports_tooltip": "tooltip ici",
+    "create_report": "Créer un rapport"
+  },
   "getparc": {
     "management-act": "Historique des actes de gestion",
     "management-act-detail": "Historique des actes",
