feat: rechercher unitairement des alarmes et configurer ma table de résultat depuis la home des alarmes

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -236,7 +236,8 @@
       "create-alarm": "Créer une alarme",
       "thresholds": "Seuil(s) de déclenchement",
       "targetedLines": "Lignes ciblées",
-      "triggers": "Déclenchements"
+      "triggers": "Déclenchements",
+      "alarmStatus": "Statut de l'alarme"
     },
     "indicators": {
       "triggered_current_month_ongoing": "Déclenchement sur le mois en cours",
@@ -260,7 +261,12 @@
       "alarm_availability": "Présence de l'alarme",
 
       "enableAlarm": "Activer l'alarme",
-      "saveAlarm": "Enregistrer l'alarme"
+      "saveAlarm": "Enregistrer l'alarme",
+      "statuses": {
+        "created": "Créée",
+        "activated": "Activée",
+        "disabled": "Désactivée"
+      }
     },
     "alarm-creation": {
       "change_country": {
