fix: remplacer Commandes en cours de traitement par le délai dans le widget commandes.
https://m2m-gitlab.by-docapost.com/powwow-ng/backlog/issues/1090

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -15,6 +15,7 @@
   "showOrHideColumns": "Ajouter / Masquer des colonnes",
   "save": "Enregistrer",
   "cancel": "Annuler",
+  "reset": "Réinitialiser",
   "resetFilters": "Réinitialiser le filtre",
   "confirm": "Confirmer",
   "delete": "Supprimer",
