fix: Correction de bugs d'affichage

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -5,7 +5,7 @@
   "searchLine": "Rechercher une ligne",
   "search": "Rechercher",
   "accessTo": "Accéder à",
-  "numberPerPage": "Nb per page",
+  "numberPerPage": "Nb par page",
   "partnerType": "Type de partenaire",
   "partnerAlarm": "Type d'alarme",
   "choosePartner": "Sélectionner des partenaires",
