FIX: Changement du message d'erreur au chargement de fichier

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -122,7 +122,7 @@
     "MULTI_CUSTOMER": "Marque blanche"
   },
   "errors": {
-    "all": "Erreurs",
+    "all": "Erreur(s)",
     "mandatory": "* Champ obligatoire"
   },
   "common": {
