fix: correction des dates d'application sur les filtres

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -175,7 +175,7 @@
     "le": "Inférieure à",
     "beginWith": "Commence par",
     "date-since": "À partir du {startDate}",
-    "date-over": "Au delà de {endDate}",
+    "date-over": "Avant le {endDate}",
     "details": {
       "title": "Commande n° {id}"
     },
