fix: Corriger la traduction du message d'erreur
https://m2m-gitlab.by-docapost.com/powwow-ng/backlog/issues/1127

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -197,7 +197,8 @@
     "never-ordered": "Jamais commandé",
     "errors": {
       "NotUniqueExternalIdForParty": "Une commande avec cette référence existe déjà",
-      "AlreadyExists": "Une commande avec cette référence existe déjà"
+      "AlreadyExists": "Une commande avec cette référence existe déjà",
+      "validateMandatoryFields": "Veuillez saisir une référence client"
     }
   },
   "alarms": {
