fix: ajouter les colonnes cycle d'observation et portée à la table des alarmes

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -215,7 +215,21 @@
     "IMEI_CHANGE": "Changement d'équipement",
     "COUNTRY_CHANGE": "Changement de pays",
     "UNDER_CONSUMPTION_VOLUME_FLOTTE": "sous-consommation de la flotte",
-    "OVER_CONSUMPTION_VOLUME_FLOTTE": "Consommation mutualisée"
+    "OVER_CONSUMPTION_VOLUME_FLOTTE": "Consommation mutualisée",
+
+    "observationCycles": {
+      "DAILY": "Quotidien",
+      "WEEKLY": "Hebdomadaire",
+      "MONTHLY": "Mensuel",
+      "CUSTOM": "Personnalisé"
+    },
+    "alarmScope": {
+      "LINE": "Ligne",
+      "OFFER": "Offre",
+      "CUSTOMER_ACCOUNT": "Compte de facturation",
+      "PARTY": "Partenaire",
+      "CUSTOM_FIELDS": "Champ libres"
+    }
   },
   "getvsion": {
     "search-by-id": "Rechercher une alarme par identifiant",
