--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -110,7 +110,8 @@
       "viewOneResult": "Consulter le résultat",
       "viewXResults": "Consulter les {num} résultats",
       "linesConsumption": "Lignes les plus consommatrices du mois",
-      "topTriggeredAlarmsPerDay": "Nombre d'alarmes déclenchées par jour"
+      "topTriggeredAlarmsPerDay": "Nombre d'alarmes déclenchées par jour",
+      "topBillingExchange": "TOP / FLOP CA"
     }
   },
   "menu": {
