fix: ajout du contexte de partenaires pour les Top widgets

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -68,6 +68,7 @@
   "webserviceNotification": "Être notifié par webservice",
   "lines": "Lignes",
   "reachMaxLength": "Vous avez atteint le nombre maximum de caractère",
+  "personalizeHome": "Personnaliser ma home",
   "home": {
     "customize": {
       "title": "Ajouter/Supprimer des widgets"
