feat: création du widget Prise d'ordre

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -112,7 +112,8 @@
       "viewXResults": "Consulter les {num} résultats",
       "linesConsumption": "Lignes les plus consommatrices du mois",
       "topTriggeredAlarmsPerDay": "Nombre d'alarmes déclenchées par jour",
-      "topBillingExchange": "TOP / FLOP CA"
+      "topBillingExchangeCA": "TOP / FLOP CA",
+      "topBillingExchangePO": "Prise d'ordre"
     }
   },
   "menu": {
