feat: alarme de changement d'opérateur depuis la home des alarmes

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -69,6 +69,8 @@
   "lines": "Lignes",
   "reachMaxLength": "Vous avez atteint le nombre maximum de caractère",
   "personalizeHome": "Personnaliser ma home",
+  "genericSuccessMessage": "Opération effectuée avec succès",
+  "genericErrorMessage": "Erreur inconnue",
   "home": {
     "customize": {
       "title": "Ajouter/Supprimer des widgets"
