feat: actions sur les alarmes depuis la table de résultat

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -74,7 +74,8 @@
   "actions": {
     "DUPLICATE": "Dupliquer",
     "DISABLE": "Désactiver",
-    "ENABLE": "Activer"
+    "ENABLE": "Activer",
+    "DELETE": "Supprimer"
   },
   "home": {
     "customize": {
