feat: Bouton Historique des actes de gestion

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -72,6 +72,8 @@
   "personalizeHome": "Personnaliser ma home",
   "genericSuccessMessage": "Opération effectuée avec succès",
   "genericErrorMessage": "Erreur inconnue",
+  "lastMassActions": "Derniers actes de gestion",
+  "showAllHistory": "Voir l'historique complet",
   "actions": {
     "DUPLICATE": "Dupliquer",
     "DISABLE": "Désactiver",
