feat(admin): ajout du filtre Partenaires pour la gestion des utilisateurs

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -328,9 +328,12 @@
   "getadmin": {
     "users": {
       "title": "Gestion des utilisateurs",
-      "fullName": "Nom ou prénom",
-      "email": "Email",
-      "partnerGroup": "Groupe de partenaire",
+      "filters": {
+        "fullName": "Nom ou prénom",
+        "email": "Email",
+        "partnerGroup": "Groupe de partenaire",
+        "partners": "Partenaires"
+      },
       "total": "{total} utilisateur(s) trouvé(s)"
     },
     "partners": {
