fix: correction dans le détail d'alarme

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -543,6 +543,10 @@
         "voice_io": "Voix E/S",
         "voice_out": "Voix sortante",
         "voice_in": "Voix entrante",
+        "status_change": "Changement de statut",
+        "imei_change": "Changement de module",
+        "plmn_change": "Changement d'opérateur",
+        "country_change": "Changement de pays",
         "ALARM_TYPE": {
           "CONSUMPTION_ON_PLMN": "Consommation sur opérateur",
           "COUNTRY_CHANGE": "Changement de pays",
