--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -101,13 +101,15 @@
       "dataVoiceConso": "CONSOMMATION DATA / MOIS",
       "stateParc": {
         "title": "ETAT DU PARC",
-        "stockLines": "Lignes en stock  (préactivées)",
+        "stockLines": "Lignes en stock",
         "preactivatedLines": "Lignes pré-activées",
         "activatedLines": "Lignes activées",
-        "suspendedLines": "Lignes suspendues (non facturées)",
-        "cancellationLines": "Lignes en cours de résiliation",
+        "suspendedLines": "Lignes suspendues",
+        "cancellationLines": "Résiliation",
         "suspendedAndNotBilledLines": "Lignes suspendues « non facturées »",
         "currentMonth": "courant",
+        "linesPreactivated": "(Nombre de lignes préactivées)",
+        "linesSuspended": "(Nombre de lignes suspendues non facturées)",
         "prevMonth": "au 1er"
       },
       "averageTimeAction": "Délais moyens",
@@ -117,7 +119,7 @@
       "message": {
         "scheduleTermination": "pas d’autre résiliation programmée",
         "termination": "pas d’autre résiliation",
-        "activation": "pas d’autre activation",
+        "activation": "Pas d'autres lignes",
         "triggeredAlarm": "pas d’autre alarme déclenchée"
       },
       "viewOneResult": "Consulter le résultat",
