fix: Correction des données incohérentes dans le détail de l'alarme

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -270,7 +270,7 @@
     "notify-ws": "Notification web service",
     "mailing-list": "Liste de diffusion",
     "activation_date": "Date d'activation",
-    "triggered_this_month": "Déclenchements mois en cours",
+    "triggered_this_month": "Déclenchement mois en cours",
     "last_month_triggered": "Déclenchement M-1",
     "last_triggered": "Dernier déclenchement",
     "associated_alarms": "Alarmes associées",
