fix(détail des alarmes): correction de la traduction et de la conversion des valeurs sur la colonne des déclenchements

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -536,13 +536,13 @@
         "observationCycle": "Cycle d’observation",
         "disableLine": "Désactiver pour la ligne",
         "enableLine": "Activer pour la ligne",
-        "data_io": "Data E/S",
+        "data": "Data E/S",
         "data_out": "Data sortante",
         "data_in": "Data entrante",
-        "sms_io": "SMS E/S",
+        "sms": "SMS E/S",
         "sms_out": "SMS sortante",
         "sms_in": "SMS entrante",
-        "voice_io": "Voix E/S",
+        "voice": "Voix E/S",
         "voice_out": "Voix sortante",
         "voice_in": "Voix entrante",
         "status_change": "Changement de statut",
