--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -368,7 +368,12 @@
   "getreport": {
     "pageTitle": "Modèles de rapports",
     "reports_tooltip": "tooltip ici",
-    "create_report": "Créer un rapport"
+    "create_report": "Créer un rapport",
+    "actions": {
+      "DETAIL": "Voir   le détail du reporting",
+      "ACTIVATION": "Activer  / Désactiver le rapport",
+      "SEARCH": "Rechercher les rapports"
+    }
   },
   "getparc": {
     "management-act": "Historique des actes de gestion",
