feat: consulter les rapports générés (exports) dans la gestion documentaire depuis la liste des rapports

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -131,6 +131,7 @@
     }
   },
   "documents": {
+    "total": "{total} document(s) trouvé(s)",
     "name": "Nom du document",
     "partner": "Partenaire",
     "creationDate": "Date d’ajout",
