feat(reports): ajout de l'action de suppression dans la gestion de documents

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -79,7 +79,8 @@
     "DUPLICATE": "Dupliquer",
     "DISABLE": "Désactiver",
     "ENABLE": "Activer",
-    "DELETE": "Supprimer"
+    "DELETE": "Supprimer",
+    "DOWNLOAD": "Télécharger"
   },
   "home": {
     "customize": {
