fix: Retours sur la getReport

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -369,7 +369,7 @@
   },
   "getreport": {
     "pageTitle": "Modèles de rapports",
-    "reports_tooltip": "tooltip ici",
+    "reports_tooltip": "Cette page permet de paramétrer des rapports",
     "create_report": "Créer un rapport",
     "actions": {
       "DETAIL": "Voir   le détail du reporting",
